Input blocking. More config params. Cast within cone of hmd forward.

--- a/forcepull_vr.vcxproj.filters
+++ b/forcepull_vr.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\config.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\api\openvr.h">
@@ -75,6 +78,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\hooks.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\config.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
