--- a/forcepull_vr.vcxproj
+++ b/forcepull_vr.vcxproj
@@ -189,6 +189,7 @@
   <ItemGroup>
     <ClCompile Include="include\api\PapyrusVRTypes.cpp" />
     <ClCompile Include="include\api\utils\OpenVRUtils.cpp" />
+    <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\physics.cpp" />
     <ClCompile Include="src\utils.cpp" />
@@ -201,6 +202,7 @@
     <ClInclude Include="include\api\utils\OpenVRUtils.h" />
     <ClInclude Include="include\api\VRHookAPI.h" />
     <ClInclude Include="include\api\VRManagerAPI.h" />
+    <ClInclude Include="include\config.h" />
     <ClInclude Include="include\hooks.h" />
     <ClInclude Include="include\main.h" />
     <ClInclude Include="include\physics.h" />
