--- a/forcepull_vr.vcxproj.filters
+++ b/forcepull_vr.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\menu_checker.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\offsets.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\version.h">
