Move shaders out of utils

--- a/forcepull_vr.vcxproj.filters
+++ b/forcepull_vr.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\offsets.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\shaders.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\version.h">
@@ -63,6 +66,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\menu_checker.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\shaders.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
