--- a/forcepull_vr.vcxproj
+++ b/forcepull_vr.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="src\menu_checker.cpp" />
     <ClCompile Include="src\offsets.cpp" />
     <ClCompile Include="src\physics.cpp" />
+    <ClCompile Include="src\shaders.cpp" />
     <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -203,6 +204,7 @@
     <ClInclude Include="include\menu_checker.h" />
     <ClInclude Include="include\physics.h" />
     <ClInclude Include="include\RE\havok.h" />
+    <ClInclude Include="include\shaders.h" />
     <ClInclude Include="include\utils.h" />
     <ClInclude Include="include\version.h" />
   </ItemGroup>
