--- a/forcepull_vr.vcxproj
+++ b/forcepull_vr.vcxproj
@@ -191,6 +191,7 @@
   <ItemGroup>
     <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\grabber.cpp" />
+    <ClCompile Include="src\hooks.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\menu_checker.cpp" />
     <ClCompile Include="src\offsets.cpp" />
