--- a/forcepull_vr.vcxproj.filters
+++ b/forcepull_vr.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\hooks.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\vrikinterface001.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\version.h">
@@ -75,6 +78,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\havok_ref_ptr.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\vrikinterface001.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
