--- a/forcepull_vr.vcxproj
+++ b/forcepull_vr.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="src\grabber.cpp" />
     <ClCompile Include="src\hooks.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\math_utils.cpp" />
     <ClCompile Include="src\menu_checker.cpp" />
     <ClCompile Include="src\offsets.cpp" />
     <ClCompile Include="src\physics.cpp" />
@@ -205,6 +206,7 @@
     <ClInclude Include="include\grabber.h" />
     <ClInclude Include="include\havok_ref_ptr.h" />
     <ClInclude Include="include\hooks.h" />
+    <ClInclude Include="include\math_utils.h" />
     <ClInclude Include="include\offsets.h" />
     <ClInclude Include="include\menu_checker.h" />
     <ClInclude Include="include\physics.h" />
