--- a/forcepull_vr.vcxproj.filters
+++ b/forcepull_vr.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="include\RE">
       <UniqueIdentifier>{a9203d2d-0171-4ad8-aabc-e773ac9d7a09}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\PQP">
+      <UniqueIdentifier>{8fc22e79-e821-476f-91bd-f4f1cad13f8f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\physics.cpp">
@@ -46,6 +49,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\effects.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\finger_curves.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -89,7 +95,16 @@
     <ClInclude Include="include\effects.h">
       <Filter>include</Filter>
     </ClInclude>
-	<ClInclude Include="include\triangle_triangle_intersection.h">
+    <ClInclude Include="include\triangle_triangle_intersection.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PQP\MatVec.h">
+      <Filter>include\PQP</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PQP\TriDist.h">
+      <Filter>include\PQP</Filter>
+    </ClInclude>
+    <ClInclude Include="include\finger_curves.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
