--- a/higgs_vr.vcxproj
+++ b/higgs_vr.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{547171CB-F934-40B9-B788-3C520FE66363}</ProjectGuid>
-    <RootNamespace>forcepull_vr</RootNamespace>
+    <RootNamespace>higgs_vr</RootNamespace>
     <SccProjectName>
     </SccProjectName>
     <SccAuxPath>
@@ -31,6 +31,7 @@
     </SccProvider>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>higgs_vr</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
