--- a/higgs_vr.vcxproj.filters
+++ b/higgs_vr.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="src\config.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\grabber.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\menu_checker.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -63,6 +60,9 @@
     <ClCompile Include="src\higgsinterface001.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\hand.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\version.h">
@@ -81,9 +81,6 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\config.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="include\grabber.h">
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\offsets.h">
@@ -126,6 +123,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\main.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\hand.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
