--- a/higgs_vr.vcxproj.filters
+++ b/higgs_vr.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\haptics.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\RE\havok.cpp">
+      <Filter>src\RE</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\version.h">
