--- a/higgs_vr.vcxproj.filters
+++ b/higgs_vr.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\constraint.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\draw.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\version.h">
@@ -141,6 +144,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\constraint.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\draw.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
